media/heimdall/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-deploy
  namespace: media
spec:
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: linuxserver/heimdall:arm64v8-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /config
            name: heimdall-config
      volumes:
        - name: heimdall-config
          hostPath:
            path: /media/config/heimdall
