media/heimdall/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-svc
  namespace: media
spec:
  selector:
    app: heimdall-svc
  ports:
  - name: web
    port: 80
    targetPort: web
    protocol: TCP
  - name: websecure
    port: 443
    targetPort: websecure
    protocol: TCP
  type: ClusterIP
